Release 1.20.5-pre2 (snapshot)